# ftp_client

./: .gitignore  CMakeLists.txt  config.h
include/: connection.h  dir_list.h  translation.h
src/: connection.c  dir_list.c  main.c  translation.c
